--- a/.config/autostart/discord.desktop
+++ b/.config/autostart/discord.desktop
@@ -1,10 +1,19 @@
 [Desktop Entry]
-Name=Discord
-StartupWMClass=discord
-Comment=All-in-one voice and text chat for gamers that's free, secure, and works on both your desktop and phone.
-GenericName=Internet Messenger
-Exec=/usr/share/discord/Discord
-Icon=discord
-Type=Application
 Categories=Network;InstantMessaging;
+Comment[en_US]=All-in-one voice and text chat for gamers that's free, secure, and works on both your desktop and phone.
+Comment=All-in-one voice and text chat for gamers that's free, secure, and works on both your desktop and phone.
+Exec=/usr/bin/discord
+GenericName[en_US]=Internet Messenger
+GenericName=Internet Messenger
+Icon=discord
+MimeType=
+Name[en_US]=Discord
+Name=Discord
 Path=/usr/bin
+StartupNotify=true
+StartupWMClass=discord
+Terminal=false
+TerminalOptions=
+Type=Application
+X-KDE-SubstituteUID=false
+X-KDE-Username=
